# cashflow

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  run.txt  test.sh
app/: main.py  test_main.py
data/: pnl.csv  working_capital.csv
settings/: config.py
test_data/: pnl.csv  working_capital.csv
